--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -137,3 +137,20 @@ $header-height-desktop: 30vh;
         }
     }
 }
+
+@media print {
+    .section {
+        .manual-section {
+            .section-content {
+                p {
+                    img {
+                        display: block;
+                        width: 75%;
+                        margin-left: auto;
+                        margin-right: auto;
+                    }
+                }
+            }
+        }
+    }
+}
