--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -3,6 +3,10 @@
 $header-height-mobile: 245vh;
 $header-height-desktop: 30vh;
 
+html, body, .table-of-contents {
+    float: none;
+}
+
 .table-of-contents {
     margin: 0 0 50px 0;
     padding: 20px;
@@ -44,79 +48,107 @@ $header-height-desktop: 30vh;
     }
 }
 
-    @media(min-width: $breakpoint-md) {
-        .table-of-contents {
-            margin: 0 0 60px 0;
-            padding: 30px;
+@media(min-width: $breakpoint-md) {
+    .table-of-contents {
+        margin: 0 0 60px 0;
+        padding: 30px;
 
-            .table-heading {
-                font-size: 200px;
-                margin: 0 0 100px 0;
-                text-align: left;
+        .table-heading {
+            font-size: 200px;
+            margin: 0 0 100px 0;
+            text-align: left;
+        }
+
+        .toc-item-section {
+            margin: 0 40px 15px 40px;
+        }
+
+        .toc-item-sub-section {
+            margin: 0 70px 10px 70px;
+        }
+    }
+}
+
+@media(min-width: $breakpoint-xl) {
+    .table-of-contents {
+        margin: 0 0 70px 0;
+        padding: 40px;
+
+        .table-heading {
+            font-size: 20px;
+            margin: 0 0 10px 0;
+        }
+
+        .toc-item-section {
+            margin: 0 60px 15px 60px;
+
+            a {
+                font-size: 30px;
             }
+        }
 
-            .toc-item-section {
-                margin: 0 40px 15px 40px;
-            }
+        .toc-item-sub-section {
+            margin: 0 100px 10px 100px;
 
-            .toc-item-sub-section {
-                margin: 0 70px 10px 70px;
+            a {
+                font-size: 25px;
             }
         }
     }
+}
 
-    @media(min-width: $breakpoint-xl) {
-        .table-of-contents {
-            margin: 0 0 70px 0;
-            padding: 40px;
+@media(min-width: $breakpoint-xxl) {
+    .table-of-contents {
+        margin: 0 0 70px 0;
+        padding: 40px;
 
-            .table-heading {
-                font-size: 20px;
-                margin: 0 0 10px 0;
+        .table-heading {
+            font-size: 20px;
+            margin: 0 0 10px 0;
+        }
+
+        .toc-item-section {
+            margin: 0 80px 15px 80px;
+
+            a {
+                font-size: 30px;
             }
+        }
 
-            .toc-item-section {
-                margin: 0 60px 15px 60px;
+        .toc-item-sub-section {
+            margin: 0 130px 10px 130px;
 
-                a {
-                    font-size: 30px;
-                }
-            }
-
-            .toc-item-sub-section {
-                margin: 0 100px 10px 100px;
-
-                a {
-                    font-size: 25px;
-                }
+            a {
+                font-size: 25px;
             }
         }
     }
+}
 
-    @media(min-width: $breakpoint-xxl) {
-        .table-of-contents {
-            margin: 0 0 70px 0;
-            padding: 40px;
+@media print {
+    .table-of-contents {
+        margin: 35px 50px 35px 50px;
+        padding: 0px;
 
-            .table-heading {
-                font-size: 20px;
-                margin: 0 0 10px 0;
-            }
+        .table-heading {
+            margin: 0 0 5px 0;
+            display: block;
+            page-break-before: always;
+            position: relative;
+        }
 
-            .toc-item-section {
-                margin: 0 80px 15px 80px;
+        .title {
+            display: block;
+            page-break-before: always;
+            position: relative;
+        }
 
-                a {
-                    font-size: 30px;
-                }
-            }
+        .toc-item-section {
+            margin: 0 20px 5px 20px;
+        }
 
-            .toc-item-sub-section {
-                margin: 0 130px 10px 130px;
-
-                a {
-                    font-size: 25px;
-                }
-            }
+        .toc-item-sub-section {
+            margin: 0 35px 5px 35px;
         }
     }
+}
